--- a/employee-management/src/main/resources/application.properties
+++ b/employee-management/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=employee-management
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_management
 spring.datasource.username=root
-spring.datasource.password=Pass@123
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
